updating portfolio with tableturner app

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,81 +48,46 @@
 
 
   <main class="container portfolio">
-    <section class="row row-cols-1 row-cols-md-2 portfolio-body">
+    <div class="row row-cols-1 row-cols-md-2 portfolio-body">
 
 
-      <section class="col mb-4">
-        <figure class="card">
+      <div class="col mb-4">
+        <div class="card">
+          <a href="https://tableturner.herokuapp.com/login" target="_blank"><img src="imgs/tableTurner.PNG"
+              class="card-img-top" alt="note taker image" height="358"></a>
+          <div class="card-body">
+            <h5 class="card-title">Table Turner</h5>
+            <p class="card-text">An application for modern restaurants looking to expedite orders and place greater emphasis on allergy concerns and special requests</p>
+            <ul class="list-group">
+              <li class="list-group-item">Technologies Used: MERN Stack, Passport, bcrypt, toastify</li>
+              <li class="list-group-item"><a href="https://github.com/rsg71/Table-Turner" target="_blank"
+                  class="card-link">Github Repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col mb-4">
+        <div class="card">
           <a href="https://findtherestaurant500.herokuapp.com/" target="_blank"><img src="imgs/restaurant_finder.PNG"
               class="card-img-top" alt="note taker image" height="358"></a>
-          <figure class="card-body">
-            <h5 class="card-title">Restaraunt Finder</h5>
-            <p class="card-text">Search by category and city to return a list of restaurants which are plotted on the Google map; users may also save favorite restaurants.</p>
+          <div class="card-body">
+            <h5 class="card-title">Restaurant Finder</h5>
+            <p class="card-text">Search by category and city to return a list of restaurants which are plotted on the Google map; users may also save favorite restaurants</p>
             <ul class="list-group">
-              <li class="list-group-item">Technologies Used: Javascript, Node.js</li>
+              <li class="list-group-item">Technologies Used: MySQL, Express, Node.js, Javascript</li>
               <li class="list-group-item"><a href="https://github.com/rsg71/Restaurant_Finder" target="_blank"
                   class="card-link">Github Repo</a></li>
             </ul>
-          </figure>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
 
-      <section class="col mb-4">
-        <figure class="card">
-          <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
-              src="imgs/Password-generator.PNG" class="card-img-top" alt="password generator" height="358"></a>
-          <figure class="card-body shado" id="pass-gen-card-body">
-            <h5 class="card-title">Password Generator</h5>
-            <p class="card-text"> A simple password generator that inputs character length and character type and
-              returns a randomly generated password to the user</p>
-            <ul class="list-group">
-              <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt"
-                  target="_blank" class="card-link">Github Repo</a></li>
-            </ul>
-          </figure>
-        </figure>
-      </section>
-
-      <section class="col mb-4">
-        <figure class="card">
-          <a href="https://rsg71.github.io/Code_Quiz-Robert_Greenawalt/" target="_blank"><img src="imgs/code-quiz.PNG"
-              class="card-img-top" alt="code quiz" height="358"></a>
-          <figure class="card-body">
-            <h5 class="card-title">Code Quiz</h5>
-            <p class="card-text" id="code-quiz-p">Test your Javascript knowledge with this short code quiz; save your
-              high scores and try to beat your personal best</p>
-            <ul class="list-group">
-              <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank"
-                  class="card-link">Github Repo</a></li>
-            </ul>
-          </figure>
-        </figure>
-      </section>
-
-      <section class="col mb-4">
-        <figure class="card">
-          <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img src="imgs/work-table.jpg"
-              class="card-img-top card-1" alt="work scheduler" height="358"></a>
-          <figure class="card-body">
-            <h5 class="card-title">Work Scheduler</h5>
-            <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current
-              hour, and green is the future</p>
-            <ul class="list-group">
-              <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Work-Scheduler" target="_blank"
-                  class="card-link">Github Repo</a></li>
-            </ul>
-          </figure>
-        </figure>
-      </section>
-
-      <section class="col mb-4">
-        <figure class="card">
+      <div class="col mb-4">
+        <div class="card">
           <a href="https://rsg71.github.io/Weather-App/" target="_blank"><img src="imgs/weather-app.PNG"
               class="card-img-top" alt="weather app" height="358"></a>
-          <figure class="card-body">
+          <div class="card-body">
             <h5 class="card-title">Weather App</h5>
             <p class="card-text">Search by city to return a real time weather report; also included is a five day
               forecast</p>
@@ -131,15 +96,66 @@
               <li class="list-group-item"><a href="https://github.com/rsg71/Weather-App" target="_blank"
                   class="card-link">Github Repo</a></li>
             </ul>
-          </figure>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
 
-      <section class="col mb-4">
-        <figure class="card">
+      <div class="col mb-4">
+        <div class="card">
+          <a href="https://rsg71.github.io/Password-Generator-Robert-Greenawalt/" target="_blank"><img
+              src="imgs/Password-generator.PNG" class="card-img-top" alt="password generator" height="358"></a>
+          <div class="card-body shado" id="pass-gen-card-body">
+            <h5 class="card-title">Password Generator</h5>
+            <p class="card-text"> A simple password generator that inputs character length and character type and
+              returns a randomly generated password to the user</p>
+            <ul class="list-group">
+              <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
+              <li class="list-group-item"><a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt"
+                  target="_blank" class="card-link">Github Repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col mb-4">
+        <div class="card">
+          <a href="https://rsg71.github.io/Code_Quiz-Robert_Greenawalt/" target="_blank"><img src="imgs/code-quiz.PNG"
+              class="card-img-top" alt="code quiz" height="358"></a>
+          <div class="card-body">
+            <h5 class="card-title">Code Quiz</h5>
+            <p class="card-text" id="code-quiz-p">Test your Javascript knowledge with this short code quiz; save your
+              high scores and try to beat your personal best</p>
+            <ul class="list-group">
+              <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
+              <li class="list-group-item"><a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank"
+                  class="card-link">Github Repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col mb-4">
+        <div class="card">
+          <a href="https://rsg71.github.io/Work-Scheduler/" target="_blank"><img src="imgs/work-table.jpg"
+              class="card-img-top card-1" alt="work scheduler" height="358"></a>
+          <div class="card-body">
+            <h5 class="card-title">Work Scheduler</h5>
+            <p class="card-text">A 9-5 work schedule that changes color dynamically; grey is past, red is the current
+              hour, and green is the future</p>
+            <ul class="list-group">
+              <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
+              <li class="list-group-item"><a href="https://github.com/rsg71/Work-Scheduler" target="_blank"
+                  class="card-link">Github Repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col mb-4">
+        <div class="card">
           <a href="https://lambaa94.github.io/Brewery-Finder/" target="_blank"><img src="imgs/brewery-finder.PNG"
               class="card-img-top" alt="brewery finder" height="358"></a>
-          <figure class="card-body">
+          <div class="card-body">
             <h5 class="card-title">Brewery Finder</h5>
             <p class="card-text">Search by state and brewery type to find a list of breweries; click on the Google map to show the brewery's location</p>
             <ul class="list-group">
@@ -147,31 +163,31 @@
               <li class="list-group-item"><a href="https://github.com/rsg71/Brewery-Finder" target="_blank"
                   class="card-link">Github Repo</a></li>
             </ul>
-          </figure>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
 
-      <section class="col mb-4">
-        <figure class="card">
+      <div class="col mb-4">
+        <div class="card">
           <a href="https://github.com/rsg71/Note_Taker" target="_blank"><img src="imgs/note_taker.png"
               class="card-img-top" alt="note taker image" height="358"></a>
-          <figure class="card-body">
+          <div class="card-body">
             <h5 class="card-title">Note Taker</h5>
-            <p class="card-text">Simple note-taker that allows the user to create, add, select, and delete notes. Useful for quick and simple notetaking that requires only a title and a description.</p>
+            <p class="card-text">Simple note-taker that allows the user to create, add, select, and delete notes. Useful for quick and simple notetaking</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript, Node.js</li>
               <li class="list-group-item"><a href="https://github.com/rsg71/Note_Taker" target="_blank"
                   class="card-link">Github Repo</a></li>
             </ul>
-          </figure>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
       
-      <section class="col mb-4">
-        <figure class="card">
+      <div class="col mb-4">
+        <div class="card">
           <a href="https://github.com/rsg71/Employee_Tracker" target="_blank"><img src="imgs/employee_tracker.PNG"
               class="card-img-top" alt="note taker image" height="358"></a>
-          <figure class="card-body">
+          <div class="card-body">
             <h5 class="card-title">Employee Tracker</h5>
             <p class="card-text">Command line interface that allows users to check a variety of fields and/or edit them. Information is displayed regarding the employees in the company, their role, department, etc. </p>
             <ul class="list-group">
@@ -179,13 +195,13 @@
               <li class="list-group-item"><a href="https://github.com/rsg71/Employee_Tracker" target="_blank"
                   class="card-link">Github Repo</a></li>
             </ul>
-          </figure>
-        </figure>
-      </section>
+          </div>
+        </div>
+      </div>
 
      
 
-    </section>
+    </div>
   </main>
 
   <!-- Footer-------------------------------------------------------------->
