edited contact page so that first and last name came through to server side via req.body

--- a/contact.html
+++ b/contact.html
@@ -56,11 +56,11 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="input1">First Name:</label>
-          <input type="name" id="firstName" class="form-control" id="inputfirstname" placeholder="First">
+          <input type="name" name="firstName" id="firstName" class="form-control" id="inputfirstname" placeholder="First">
         </div>
         <div class="form-group col-md-6">
           <label for="input2">Last Name:</label>
-          <input type="name" id="lastName" class="form-control" id="inputlastname" placeholder="Last">
+          <input type="name" name="lastName" id="lastName" class="form-control" id="inputlastname" placeholder="Last">
         </div>
       </div>
 
