editing headshot photo; adding technologies to index page

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,9 +60,11 @@
             <p class="card-text">An application for modern restaurants looking to expedite orders and place greater emphasis on allergy concerns and special requests</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: MERN Stack, Passport, bcrypt, toastify</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Table-Turner" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Table-Turner" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -76,9 +78,11 @@
             <p class="card-text">Search by category and city to return a list of restaurants which are plotted on the Google map; users may also save favorite restaurants</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: MySQL, Express, Node.js, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Restaurant_Finder" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Restaurant_Finder" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -93,9 +97,11 @@
               forecast</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Weather-App" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Weather-App" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -110,9 +116,11 @@
               returns a randomly generated password to the user</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt"
-                  target="_blank" class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Password-Generator-Robert-Greenawalt"
+              target="_blank" class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -127,9 +135,11 @@
               high scores and try to beat your personal best</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Code_Quiz-Robert_Greenawalt" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -144,9 +154,11 @@
               hour, and green is the future</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Work-Scheduler" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Work-Scheduler" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -160,9 +172,11 @@
             <p class="card-text">Search by state and brewery type to find a list of breweries; click on the Google map to show the brewery's location</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Foundation, Javascript, 3 API's</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Brewery-Finder" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Brewery-Finder" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -176,9 +190,11 @@
             <p class="card-text">Simple note-taker that allows the user to create, add, select, and delete notes. Useful for quick and simple notetaking</p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: HTML, CSS, Bootstrap, Javascript, Node.js</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Note_Taker" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Note_Taker" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
@@ -192,9 +208,11 @@
             <p class="card-text">Command line interface that allows users to check a variety of fields and/or edit them. Information is displayed regarding the employees in the company, their role, department, etc. </p>
             <ul class="list-group">
               <li class="list-group-item">Technologies Used: Javascript, Node.js</li>
-              <li class="list-group-item"><a href="https://github.com/rsg71/Employee_Tracker" target="_blank"
-                  class="card-link">Github Repo</a></li>
             </ul>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Github Repo: <a href="https://github.com/rsg71/Employee_Tracker" target="_blank"
+              class="card-link">Click here</a></small>
           </div>
         </div>
       </div>
